test/files/neg/case-collision.scala
// scalac: -Xfatal-warnings
package foo

class Bippy

class BIPPY

object Dingo
object DINGO

case class Hyrax()
object HyRaX

class Wacko
object wackO
